--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,4 +14,12 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/create-github-app-token@d72941d797fd3113feb6b93fd0dec494b13a2547 # v1.12.0
+        id: app-token
+        with:
+          app-id: ${{ vars.ODAN_SANDBOX_BOT_APP_ID }}
+          private-key: ${{ secrets.ODAN_SANDBOX_BOT_PRIVATE_KEY }}
+
       - uses: googleapis/release-please-action@a02a34c4d625f9be7cb89156071d8567266a2445 # v4.2.0
+        with:
+          token: ${{ steps.app-token.outputs.token }}
